# OA-LICalib

./: CMakeLists.txt  package.xml
config/: livox_hap.yaml  ouster.yaml  simu.yaml
data/bag/: calib_result.csv  simu_calib_result.txt
include/calib/: calib_helper.h  inertial_initializer.h  lidar_localization.h  lidar_ndt_odometry.h  scan_undistortion.h
include/calib/io/: dataset_reader.h  segment_dataset.h
include/sensor_data/: calibration.h  cloud_type.h  lidar_feature.h  lidar_livox.h  lidar_ouster.h  lidar_rs_16.h  lidar_vlp_16.h  lidar_vlp_points.h
include/trajectory/: trajectory_estimator.h  trajectory_viewer.h
include/utils/: map_evaluation_utils.h
launch/: li_calib.launch  li_calib_robobus_ouster.launch
msg/: FeatureCloud.msg  ImuArray.msg  PoseArray.msg
src/app/: li_calib_node.cpp  map_evaluation_tools.cpp
src/calib/: calib_helper.cpp  lidar_localization.cpp  lidar_ndt_odometry.cpp  scan_undistortion.cpp  surfel_association.cpp
src/trajectory/: se3_trajectory.cpp  trajectory_viewer.cpp
