<?xml version="1.0"?>
<package format="3">
  <name>oa_licalib</name>
  <version>3.1.0</version>
  <description>The oa_licalib package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="april@todo.todo">hkw</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>angles</depend>
  <depend>rslidar_msgs</depend>
  <depend>std_msgs</depend>
 <depend>tf2_eigen</depend>
 <depend>velodyne_msgs</depend>
 <depend>rosbag2</depend>
<!--  <build_depend>std_msgs</build_depend>-->
<!--  <exec_depend>std_msgs</exec_depend>-->
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

<!--  <build_depend>rclcpp</build_depend>-->
  <build_depend>rospy</build_depend>

  <build_depend>ndt_omp_ros2</build_depend>
  <exec_depend>ndt_omp_ros2</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

<!--  <build_depend>pcl_ros</build_depend>-->
<!--  <exec_depend>pcl_ros</exec_depend>-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>libceres-dev</build_depend>
  <exec_depend>libceres-dev</exec_depend>
  <depend>PCL</depend>
  <depend>pcl_ros</depend>
  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>
  <depend>oa_licalib_msgs</depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

<!--  <build_export_depend>rclcpp</build_export_depend>-->
  <build_export_depend>rospy</build_export_depend>

<!--  <exec_depend>rclcpp</exec_depend>-->
  <exec_depend>rospy</exec_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
